create branche develops

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "directories": {
     "test": "test"
   },
-  "author": "MUSTAPHA MHARZI",
+  "author": "MUSTAPHA M'HARZI",
   "license": "ISC"
 }
