--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "kataTourist",
   "version": "0.0.0",
   "description": "a kata for SG",
+  "author": "MUSTAPHA M'HARZI",
+  "license": "ISC",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
-  "author": "MUSTAPHA M'HARZI",
-  "license": "ISC"
+  "scripts": {
+    "test": "./node_modules/.bin/mocha"
+  },
+  "devDependencies": {
+    "expect": "^1.20.1",
+    "express": "^4.13.4",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
+  },
+  "dependencies": {
+    "chai": "^3.5.0",
+    "express": "^4.15.2",
+    "mocha": "^2.5.3",
+    "request": "^2.81.0"
+  }
 }
