--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha",
+    "start": "node ./start.js PORT=3001 "
   },
   "devDependencies": {
     "expect": "^1.20.1",
