--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
+    "test": "./node_modules/.bin/karma start --single-run",
     "start": "node ./start.js PORT=3001 "
   },
   "devDependencies": {
     "expect": "^1.20.1",
     "express": "^4.13.4",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^2.5.3",
+    "phantomjs-prebuilt": "^2.1.7",
     "supertest": "^1.2.0"
-  },
-  "dependencies": {
-    "chai": "^3.5.0",
-    "express": "^4.15.2",
-    "mocha": "^2.5.3",
-    "request": "^2.81.0"
   }
 }
